# ci-cd-tracking

./: ACTION_REPOSITORY_README.md  PUBLISHING_GUIDE.md  README.md  ci-pipeline.yml  publish-actions.sh  pyproject.toml
.github/actions/bandit/: action.yml
.github/actions/benchmark-tests/: action.yml
.github/actions/changelog-validate/: action.yml
.github/actions/cloc/: action.yml
.github/actions/commitlint/: action.yml
.github/actions/container-build/: action.yml
.github/actions/coverage-threshold/: action.yml
.github/actions/db-migrate/: action.yml
.github/actions/dependency-check/: action.yml
.github/actions/deploy-production/: action.yml
.github/actions/deploy-staging/: action.yml
.github/actions/docs-build/: action.yml
.github/actions/infra-validate/: action.yml
.github/actions/integration-tests/: action.yml
.github/actions/license-check/: action.yml
.github/actions/load-test/: action.yml
.github/actions/metrics-update/: action.yml
.github/actions/mutation-test/: action.yml
.github/actions/mypy/: action.yml
.github/actions/notify/: action.yml
.github/actions/pip-audit/: action.yml
.github/workflows/: ci-pipeline.yml
deployment/: .env.example  README.md  docker-compose.yml  grafana-dashboards.yml  grafana-datasources.yml  loki-config.yml  prometheus.yml  promtail-config.yml  start.sh
deployment/dashboards/: github-actions-overview.json
deployment/kubernetes/: README.md  grafana.yaml  loki.yaml  prometheus.yaml  pushgateway.yaml
docs/: push-to-loki-action.md
src/ci_cd_tracking/: __init__.py  main.py
(+13 files in other folders)
