[build-system]
requires = ["setuptools>=80.9.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-cd-tracking"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.4",
    "setuptools>=80.9.0",
    "setuptools-scm>=9.2.2",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

